edicoes-anteriores/2024.1/README.md
# IF688 - Teoria e Implementação de Linguagens Computacionais

## Ciência da Computação & Engenharia da Computação, [Centro de Informática](http://www.cin.ufpe.br), ([UFPE](http://www.ufpe.br))

### Instrutor

* **Professor:** Leopoldo Motta Teixeira ([@leopoldomt](https://github.com/leopoldomt) --- lmt@cin)

* **Monitores:** 
  - A confirmar

### Horário e Local de Aulas

* Terça (10h-12h), Sala E233
* Quinta (08h-10h), Sala E233

### Ementa

Este curso explora os princípios, algoritmos, e estruturas de dados envolvidos na teoria e implementação de compiladores. 
O conteúdo planejado inclui uma introdução aos princípios e técnicas de construção de compiladores, conceitos básicos da teoria de linguagens, análise léxica, análise sintática, análise semântica, representação de código intermediário, ambientes de execução, análise estática, otimização de código, geração de código.

### Bibliografia Sugerida

- [Keith Cooper & Linda Torczon. Engineering a Compiler. 2nd Edition, Morgan Kaufmann, 2012](https://www.elsevier.com/books/engineering-a-compiler/cooper/978-0-12-088478-0)
- [Robert Nystrom. Crafting interpreters. Genever Benning, 2021.](https://craftinginterpreters.com/)
- [Jeremy G. Siek. Essentials of Compilation: An Incremental Approach in Racket/Python. 1st Edition, MIT Press, 2023](https://mitpress.mit.edu/9780262048248/essentials-of-compilation/)
- [Dick Grune, Kees Van Reeuwijk, Henri E. Bal, Ceriel J. H. Jacobs, and Koen Langendoen. Modern Compiler Design. 2nd Edition, Springer, 2012](https://dickgrune.com/Books/MCD_2nd_Edition/)

### Bibliografia Complementar
- [Andrew Appel & Jens Palsberg. Modern Compiler Implementation in Java. 2nd edition, Cambridge University Press, 2003](https://www.cs.princeton.edu/~appel/modern/java/)
- [Alfred Aho, Monica Lam, Ravi Sethi, and Jeffrey Ullman. Compilers: Principles, Techniques, and Tools. 2nd Edition, Addison-Wesley, 2006](http://dragonbook.stanford.edu)
- [Michael Scott. Programming Language Pragmatics. 3rd edition, Morgan Kaufmann, 2009](https://www.cs.rochester.edu/u/scott/pragmatics/3e/)
- [Dick Grune & Ceriel J.H. Jacobs. Parsing Techniques. 2nd edition, Springer, 2008](https://dickgrune.com/Books/PTAPG_2nd_Edition/)
- [Terence Parr. Language Implementation Patterns. 1st edition, Pragmatic Bookshelf, 2010](https://pragprog.com/book/tpdsl/language-implementation-patterns)
- [Terence Parr. The Definitive ANTLR 4 Reference. 2nd edition, Pragmatic Bookshelf, 2013](https://pragprog.com/book/tpantlr2/the-definitive-antlr-4-reference)
- [Ronald Mak. Writing Compilers and Interpreters: A Modern Software Engineering Approach Using Java. 1st edition, John Wiley & Sons, 2009](http://www.wiley.com/WileyCDA/WileyTitle/productCd-0470177071.html)

### Objetivos

O objetivo da disciplina é fornecer fundamentos para desenvolvimento da compreensão da teoria e prática de compiladores, e de questões envolvidas na implementação de linguagens.

### Metodologia

Na disciplina, utilizaremos uma mistura de aulas tradicionais com exercícios e tarefas de programação em sala de aula e para casa. 

### Recursos

- [Discord](https://discord.gg/Spk2uvMp)
- [Google Classroom](https://classroom.google.com/c/NjU2NTM3NTE5ODM1?cjc=4t57zae)
- Github Classroom - Ver instruções no Google Classroom


### Avaliação

* `Nota` = (`Atividades` x 5 + `Provas` x 5) / 10 
  * `Atividades` = Atividades de programação
  * `Provas` = Exercícios escolares
* `Final`

- Observações:
  - Entrega fora do prazo: **redutor de 1 ponto por dia de atraso**. 
  - Atraso máximo: **1 (uma) semana**. Após esse prazo, será dada nota **zero** para a respectiva atividade de avaliação.
  - Trabalhos **“CTRL-C + CTRL-V”** terão nota **zero** (vale tanto para cópia de colegas, como para trabalhos copiados da internet).

### Plano de Ensino

*Este plano de ensino está sujeito a alterações durante o semestre, visite frequentemente a página para obter a versão mais atualizada, ou acompanhe os updates no repositório.*

| Data do Encontro | Dia da Semana  | Conteúdo Programático | Atividades Associadas |
|------------------|----------------|-----------------------|-----------------------|
| 16.04.24         | Terça-feira    | [Introdução](2024-04-16.md)            |                       |
| 18.04.24         | Quinta-feira   | [Análise Léxica](2024-04-18.md)        |                       |
| 23.04.24         | Terça-feira    | [Implementando Analisadores Léxicos](2024-04-23.md)    |                       |
| 25.04.24         | Quinta-feira   | [Gerando Analisadores Léxicos e Introdução a Análise Sintática](2024-04-25.md)                      |                       |
| 30.04.24         | Terça-feira    | [Análise Sintática - Top-Down Parsing](2024-04-30.md)                      |                       |
| 02.05.24         | Quinta-feira   | [Análise Sintática - LL(1) parsing](2024-05-02.md)                      |                       |
| 07.05.24         | Terça-feira    | [Análise Sintática - Introdução a Bottom-Up Parsing](2024-05-07.md)                      |                       |
| 09.05.24         | Quinta-feira   | [Análise Sintática - LR(1) parsing](2024-05-09.md)                      |                       |
| 14.05.24         | Terça-feira    | [Análise Semântica - Introdução](2024-05-14.md)                      |                       |
| 16.05.24         | Quinta-feira   | [Análise Semântica - Tipos](2024-05-16.md)                      |                       |
| 21.05.24         | Terça-feira    | [_Recursive-Descent Parsing_ e _Abstract Syntax Trees_](2024-05-21.md)                      |                       |
| 23.05.24         | Quinta-feira   | Revisão                     |                       |
| 28.05.24         | Terça-feira    | **Aula Cancelada - CHUVA**                |                       |
| 30.05.24         | Quinta-feira   | **FERIADO** - Corpus Christi           |                       |
| 04.06.24         | Terça-feira    | **1 Exercício Escolar**                |                       |
| 06.06.24         | Quinta-feira   | [AST Visitors](2024-06-06.md)  |                       |
| 11.06.24         | Terça-feira    | [Representação Intermediária de Código - Código de 3 Endereços](2024-06-11.md)         |                       |
| 13.06.24         | Quinta-feira   | **Aula Cancelada - Cirurgia Leopoldo**                |                       |
| 18.06.24         | Terça-feira    | [Representação Intermediária de Código - _Control-flow Graphs_](2024-06-18.md)         |                       |
| 20.06.24         | Quinta-feira   | [Análise e Otimização de Código - Otimizações Locais](2024-06-20.md)         |                       |
| 25.06.24         | Terça-feira    | [Análise e Otimização de Código - Otimizações Globais _forward-flow_](2024-06-25.md)         |                       |
| 27.06.24         | Quinta-feira   | [Análise e Otimização de Código - Otimizações Globais _backward-flow_](2024-06-27.md)         |                       |
| 02.07.24         | Terça-feira    | [Ambientes de Execução - Pilha](2024-07-02.md)                     |                       |
| 04.07.24         | Quinta-feira   | [Ambientes de Execução - Heap](2024-07-04.md)                      |                       |
| 09.07.24         | Terça-feira    | [Geração de Código](2024-07-09.md)                      |                       |
| 11.07.24         | Quinta-feira   | [Geração de Código](2024-07-11.md)                |                      |
| 16.07.24         | Terça-feira    | **FERIADO** - Dia de Nossa Senhora do Carmo  |                       |
| 18.07.24         | Quinta-feira   | APS                      |                       |
| 23.07.24         | Terça-feira    | [Atividade ANTLR](2024-07-23.md)                      |                       |
| 25.07.24         | Quinta-feira   | APS |                      |
| 30.07.24         | Terça-feira    | Revisão/Tira-Dúvidas                      |                       |
| 01.08.24         | Quinta-feira   | **2 Exercício Escolar**                      |                       |
| 06.08.24         | Terça-feira    | **Segunda Chamada** |                      |
| 08.08.24         | Quinta-feira    | APS                      |                       |
| 13.08.24         | Terça-feira   | **Prova Final**                |                      |